# launch-my-elbow

./: CMakeLists.txt  README.md
include/: Image.h  ImageBase.h  ImageImpl.h  ImageTypes.h
source/: Image.cpp  ImageBase.cpp  ImageImpl.cpp  ImageTypes.cpp  main.cpp
